--- a/productservice-dev.properties
+++ b/productservice-dev.properties
@@ -1,2 +1,4 @@
-msg = Hello world - this is from config server –prod environment.
-server.port=8082
+msg=This is product service properties file.
+server.port=8083
+spring.kafka.bootstrap-servers=localhost:2181
+spring.kafka.consumer.group-id=foo
