user service properties added

--- a/userservice-dev.properties
+++ b/userservice-dev.properties
@@ -1,2 +1,3 @@
-msg=UserService - this is from config server dev environment.
-server.port=8081
+author=Gebre
+msg=UserService - this is from config server -dev environment.
+server.port=8084
