--- a/productservice-dev.properties
+++ b/productservice-dev.properties
@@ -1,4 +1,4 @@
 msg=This is product service properties file.
 server.port=8083
-#spring.kafka.bootstrap-servers=localhost:9092
-#spring.kafka.consumer.group-id=foo
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=group_id
