--- a/userservice-dev.properties
+++ b/userservice-dev.properties
@@ -1,3 +1,5 @@
 author=Gebre
 msg=UserService - this is from config server -dev environment.
 server.port=8084
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=group_id
