--- a/userservice-dev.properties
+++ b/userservice-dev.properties
@@ -3,3 +3,4 @@ msg=UserService - this is from config server -dev environment.
 server.port=8084
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=group_id
+spring.kafka.consumer.group-id-json=group_json
